[installed] styled components

--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -74,10 +74,10 @@ a {
   background: transparent;
   color: var(--primaryColor);
 }
-/* .gatsby-image-wrapper {
+.gatsby-image-wrapper {
   max-height: 600px;
   box-shadow: var(--lightShadow);
-} */
+}
 main {
   min-height: 100vh;
   display: flex;
