--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -6,7 +6,8 @@
   --offWhite: #f7f7f7;
   --mainBlack: #222;
   --mainGrey: #ececec;
-  --darkGrey: #afafaf;
+  --darkGrey: #cfcfcf;
+  --grey: grey;
   --mainTransition: all 0.3s linear;
   --mainSpacing: 4px;
   --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
@@ -36,11 +37,11 @@ h6 {
   margin-bottom: 1.25rem;
   letter-spacing: var(--mainSpacing);
 }
-p {
-  margin-bottom: 1.25rem;
-}
 a {
   text-decoration: none;
+}
+p {
+  margin-bottom: 1.25rem;
 }
 .defaultHero {
   min-height: calc(100vh - 62px);
@@ -53,6 +54,7 @@ a {
 .btn-white,
 .btn-primary {
   text-transform: uppercase;
+  text-decoration: none;
   letter-spacing: var(--mainSpacing);
   color: var(--mainWhite);
   border: 2px solid var(--mainWhite);
@@ -73,10 +75,6 @@ a {
 .btn-primary:hover {
   background: transparent;
   color: var(--primaryColor);
-}
-.gatsby-image-wrapper {
-  max-height: 600px;
-  box-shadow: var(--lightShadow);
 }
 main {
   min-height: 100vh;
